commit translated contents

--- a/docs/docs-ref-autogen/excel/excel.datavalidation.yml
+++ b/docs/docs-ref-autogen/excel/excel.datavalidation.yml
@@ -2,7 +2,7 @@
 items:
   - uid: excel.Excel.DataValidation
     summary: |-
-      表示应用于当前范围的数据验证。
+      表示应用于当前范围的数据验证。 若要了解有关数据验证对象模型的详细信息, 请参阅[向 Excel 区域添加数据验证](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-data-validation)<!-- -->.
 
       \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.DataValidation
