--- a/docs/docs-ref-autogen/excel/excel.workbook.yml
+++ b/docs/docs-ref-autogen/excel/excel.workbook.yml
@@ -2,7 +2,7 @@
 items:
   - uid: excel.Excel.Workbook
     summary: |-
-      工作簿是顶级对象，它包含相关 workbook 对象，例如工作表、表、范围等。
+      工作簿是顶级对象, 其中包含相关的工作簿对象, 如工作表、表、范围等。若要了解有关工作簿对象模型的详细信息, 请参阅[使用 Excel JAVASCRIPT API 处理工作簿](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-workbooks)<!-- -->.
 
       \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Workbook
