--- a/docs/docs-ref-autogen/excel_release/excel.table.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.table.yml
@@ -2,7 +2,7 @@
 items:
   - uid: excel_release.Excel.Table
     summary: |-
-      表示一个 Excel 表。
+      表示一个 Excel 表。 若要了解有关表对象模型的详细信息, 请参阅[使用 Excel JAVASCRIPT API 处理表](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-tables)<!-- -->.
 
       \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Table
@@ -567,7 +567,7 @@ items:
           ```
   - uid: excel_release.Excel.Table.reapplyFilters
     summary: |-
-      重新应用当前表上的所有筛选器。
+      重新应用当前在 table 上应用的所有 filter。
 
       \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: reapplyFilters()
