--- a/docs/docs-ref-autogen/office/office.eventtype.yml
+++ b/docs/docs-ref-autogen/office/office.eventtype.yml
@@ -5,6 +5,8 @@ items:
       指定引发的事件的类型。 由 * EventArgs `type`对象的属性返回。
 
       项目支持的外接程序`Office.EventType.ResourceSelectionChanged`<!-- -->, `Office.EventType.TaskSelectionChanged`<!-- -->和`Office.EventType.ViewSelectionChanged`事件类型。
+
+      仅适用于 Outlook 的任务窗格外接程序支持邮箱 API 集事件类型。
     remarks: '和主机: Excel、Word。 ** `BindingDataChanged` `BindingSelectionChanged` **'
     name: Office.EventType
     fullName: Office.EventType
@@ -43,7 +45,7 @@ items:
     type: field
   - uid: office.Office.EventType.AppointmentTimeChanged
     summary: |-
-      在 Outlook 中更改所选约会或系列的任何日期或时间时触发的触发器。
+      在 Outlook 中更改所选约会或系列的任何日期或时间时触发的触发器。 仅在任务窗格中受支持。
 
       \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: AppointmentTimeChanged
@@ -53,7 +55,7 @@ items:
     type: field
   - uid: office.Office.EventType.AttachmentsChanged
     summary: |-
-      将附件添加到项目或从项目中删除附件时触发。
+      将附件添加到项目或从项目中删除附件时触发。 仅在任务窗格中受支持。
 
       \[[API 集: 邮箱预览](/office/dev/add-ins/reference/javascript-api-for-office)\]
     isPreview: true
@@ -102,7 +104,7 @@ items:
     type: field
   - uid: office.Office.EventType.EnhancedLocationsChanged
     summary: |-
-      在 Outlook 中更改约会位置时触发。
+      在 Outlook 中更改约会位置时触发。 仅在任务窗格中受支持。
 
       \[[API 集: 邮箱预览](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: EnhancedLocationsChanged
@@ -112,7 +114,7 @@ items:
     type: field
   - uid: office.Office.EventType.ItemChanged
     summary: |-
-      在任务窗格处于固定状态时选择不同的 Outlook 项目进行查看时触发触发器。
+      在任务窗格处于固定状态时选择不同的 Outlook 项目进行查看时触发触发器。 仅在任务窗格中受支持。
 
       \[[API 集: 邮箱 1.5](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: ItemChanged
@@ -143,7 +145,7 @@ items:
     type: field
   - uid: office.Office.EventType.OfficeThemeChanged
     summary: |-
-      在 Outlook 中更改 OfficeTheme 时触发。
+      在 Outlook 中更改 OfficeTheme 时触发。 仅在任务窗格中受支持。
 
       \[[API 集: 邮箱预览](/office/dev/add-ins/reference/javascript-api-for-office)\]
     isPreview: true
@@ -154,7 +156,7 @@ items:
     type: field
   - uid: office.Office.EventType.RecipientsChanged
     summary: |-
-      在 Outlook 中更改了所选项目或约会位置的收件人列表时触发。
+      在 Outlook 中更改了所选项目或约会位置的收件人列表时触发。 仅在任务窗格中受支持。
 
       \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: RecipientsChanged
@@ -164,7 +166,7 @@ items:
     type: field
   - uid: office.Office.EventType.RecurrenceChanged
     summary: |-
-      在 Outlook 中更改所选系列的定期模式时触发。
+      在 Outlook 中更改所选系列的定期模式时触发。 仅在任务窗格中受支持。
 
       \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: RecurrenceChanged
