--- a/docs/docs-ref-autogen/outlook/office.item.yml
+++ b/docs/docs-ref-autogen/outlook/office.item.yml
@@ -34,7 +34,7 @@ items:
       - outlook.Office.Item.seriesId
   - uid: outlook.Office.Item.addHandlerAsync
     summary: |-
-      添加支持事件的事件处理程序。
+      添加支持事件的事件处理程序。 **注意**: 事件仅在任务窗格中可用。
 
       目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->. 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中, 也支持。
 
@@ -73,7 +73,7 @@ items:
             - '(asyncResult: Office.AsyncResult<void>) => void'
   - uid: outlook.Office.Item.addHandlerAsync_1
     summary: |-
-      添加支持事件的事件处理程序。
+      添加支持事件的事件处理程序。 **注意**: 事件仅在任务窗格中可用。
 
       目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->. 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中, 也支持。
 
@@ -447,7 +447,7 @@ items:
             - any
   - uid: outlook.Office.Item.removeHandlerAsync
     summary: |-
-      删除受支持事件类型的事件处理程序。
+      删除受支持事件类型的事件处理程序。 **注意**: 事件仅在任务窗格中可用。
 
       目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->. 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中, 也支持。
 
@@ -482,7 +482,7 @@ items:
             - '(asyncResult: Office.AsyncResult<void>) => void'
   - uid: outlook.Office.Item.removeHandlerAsync_1
     summary: |-
-      删除受支持事件类型的事件处理程序。
+      删除受支持事件类型的事件处理程序。 **注意**: 事件仅在任务窗格中可用。
 
       目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->. 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中, 也支持。
 
