--- a/docs/docs-ref-autogen/outlook_1_6/office.notificationmessagedetails.yml
+++ b/docs/docs-ref-autogen/outlook_1_6/office.notificationmessagedetails.yml
@@ -22,7 +22,10 @@ items:
       - Outlook_1_6.Office.NotificationMessageDetails.persistent
       - Outlook_1_6.Office.NotificationMessageDetails.type
   - uid: Outlook_1_6.Office.NotificationMessageDetails.icon
-    summary: 对在 "资源" 部分的清单中定义的图标的引用。 它将显示在信息栏区域。 仅当类型为 InformationalMessage 时才适用。 为不受支持的类型指定此参数将导致异常。
+    summary: |-
+      对在 "资源" 部分的清单中定义的图标的引用。 它将显示在信息栏区域。 仅当类型为 InformationalMessage 时才适用。 为不受支持的类型指定此参数将导致异常。
+
+      **注意**: 目前, 自定义图标仅显示在 Windows 上的 Outlook 中, 而不是在其他客户端 (例如, Mac、web 浏览器) 上显示。
     name: icon
     fullName: icon
     langs:
