--- a/docs/docs-ref-autogen/outlook_1_7/office.appointmentread.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/office.appointmentread.yml
@@ -49,7 +49,7 @@ items:
       - Outlook_1_7.Office.AppointmentRead.subject
   - uid: Outlook_1_7.Office.AppointmentRead.addHandlerAsync
     summary: |-
-      添加支持事件的事件处理程序。
+      添加支持事件的事件处理程序。 **注意**: 事件仅在任务窗格中可用。
 
       目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->.
 
@@ -88,7 +88,7 @@ items:
             - '(asyncResult: Office.AsyncResult<void>) => void'
   - uid: Outlook_1_7.Office.AppointmentRead.addHandlerAsync_1
     summary: |-
-      添加支持事件的事件处理程序。
+      添加支持事件的事件处理程序。 **注意**: 事件仅在任务窗格中可用。
 
       目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->.
 
@@ -647,7 +647,7 @@ items:
             - any
   - uid: Outlook_1_7.Office.AppointmentRead.removeHandlerAsync
     summary: |-
-      删除受支持事件类型的事件处理程序。
+      删除受支持事件类型的事件处理程序。 **注意**: 事件仅在任务窗格中可用。
 
       目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->.
 
@@ -682,7 +682,7 @@ items:
             - '(asyncResult: Office.AsyncResult<void>) => void'
   - uid: Outlook_1_7.Office.AppointmentRead.removeHandlerAsync_1
     summary: |-
-      删除受支持事件类型的事件处理程序。
+      删除受支持事件类型的事件处理程序。 **注意**: 事件仅在任务窗格中可用。
 
       目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->.
 
