--- a/docs/docs-ref-autogen/outlook_1_7/office.mailbox.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/office.mailbox.yml
@@ -47,7 +47,7 @@ items:
       - Outlook_1_7.Office.Mailbox.userProfile
   - uid: Outlook_1_7.Office.Mailbox.addHandlerAsync
     summary: |-
-      添加支持事件的事件处理程序。
+      添加支持事件的事件处理程序。 **注意**: 事件仅在任务窗格中可用。
 
       目前, 唯一受支持的事件类型是`Office.EventType.ItemChanged`<!-- -->.
 
@@ -86,7 +86,7 @@ items:
             - '(asyncResult: Office.AsyncResult<void>) => void'
   - uid: Outlook_1_7.Office.Mailbox.addHandlerAsync_1
     summary: |-
-      添加支持事件的事件处理程序。
+      添加支持事件的事件处理程序。 **注意**: 事件仅在任务窗格中可用。
 
       目前, 唯一受支持的事件类型是`Office.EventType.ItemChanged`<!-- -->.
 
@@ -753,7 +753,7 @@ items:
             - any
   - uid: Outlook_1_7.Office.Mailbox.removeHandlerAsync
     summary: |-
-      删除受支持事件类型的事件处理程序。
+      删除受支持事件类型的事件处理程序。 **注意**: 事件仅在任务窗格中可用。
 
       目前, 唯一受支持的事件类型是`Office.EventType.ItemChanged`<!-- -->.
 
@@ -788,7 +788,7 @@ items:
             - '(asyncResult: Office.AsyncResult<void>) => void'
   - uid: Outlook_1_7.Office.Mailbox.removeHandlerAsync_1
     summary: |-
-      删除受支持事件类型的事件处理程序。
+      删除受支持事件类型的事件处理程序。 **注意**: 事件仅在任务窗格中可用。
 
       目前, 唯一受支持的事件类型是`Office.EventType.ItemChanged`<!-- -->.
 
