--- a/docs/docs-ref-autogen/outlook_1_7/office.messagecompose.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/office.messagecompose.yml
@@ -179,7 +179,7 @@ items:
             - '(asyncResult: Office.AsyncResult<string>) => void'
   - uid: Outlook_1_7.Office.MessageCompose.addHandlerAsync
     summary: |-
-      添加支持事件的事件处理程序。
+      添加支持事件的事件处理程序。 **注意**: 事件仅在任务窗格中可用。
 
       目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->.
 
@@ -218,7 +218,7 @@ items:
             - '(asyncResult: Office.AsyncResult<void>) => void'
   - uid: Outlook_1_7.Office.MessageCompose.addHandlerAsync_1
     summary: |-
-      添加支持事件的事件处理程序。
+      添加支持事件的事件处理程序。 **注意**: 事件仅在任务窗格中可用。
 
       目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->.
 
@@ -604,7 +604,7 @@ items:
             - '(asyncResult: Office.AsyncResult<void>) => void'
   - uid: Outlook_1_7.Office.MessageCompose.removeHandlerAsync
     summary: |-
-      删除受支持事件类型的事件处理程序。
+      删除受支持事件类型的事件处理程序。 **注意**: 事件仅在任务窗格中可用。
 
       目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->.
 
@@ -639,7 +639,7 @@ items:
             - '(asyncResult: Office.AsyncResult<void>) => void'
   - uid: Outlook_1_7.Office.MessageCompose.removeHandlerAsync_1
     summary: |-
-      删除受支持事件类型的事件处理程序。
+      删除受支持事件类型的事件处理程序。 **注意**: 事件仅在任务窗格中可用。
 
       目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->.
 
