--- a/docs/docs-ref-autogen/excel/excel.range.yml
+++ b/docs/docs-ref-autogen/excel/excel.range.yml
@@ -2,7 +2,7 @@
 items:
   - uid: excel.Excel.Range
     summary: |-
-      区域表示一个或多个相邻的单元格，例如单元格、行、列、单元格块等。
+      Range 表示一个或多个连续单元格的集合, 例如单元格、行、列、单元格块等。若要了解有关如何在整个 API 中使用范围的详细信息, 请参阅[使用 Excel JAVASCRIPT Api 处理区域](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-ranges)并使用[excel javascript api (高级) 处理区域](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-ranges-advanced)<!-- -->.
 
       \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Range
