--- a/docs/docs-ref-autogen/excel_release/excel.chart.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.chart.yml
@@ -2,7 +2,7 @@
 items:
   - uid: excel_release.Excel.Chart
     summary: |-
-      表示工作簿中的 chart 对象。
+      表示工作簿中的 chart 对象。 若要了解有关 Chart 对象模型的详细信息, 请参阅[使用 Excel JAVASCRIPT API 处理图表](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-charts)<!-- -->.
 
       \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Chart
@@ -523,7 +523,7 @@ items:
           ```
   - uid: excel_release.Excel.Chart.pivotOptions
     summary: |-
-      封装数据透视图表的选项。 只读。
+      封装数据透视图的选项。 只读。
 
       \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: pivotOptions
