--- a/docs/docs-ref-autogen/excel_release/excel.pivottable.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.pivottable.yml
@@ -2,7 +2,7 @@
 items:
   - uid: excel_release.Excel.PivotTable
     summary: |-
-      表示 Excel 数据透视表。
+      表示 Excel 数据透视表。 若要了解有关数据透视表对象模型的详细信息, 请参阅[使用 Excel JAVASCRIPT API 处理数据透视表](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-pivottables)<!-- -->.
 
       \[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.PivotTable
@@ -143,7 +143,7 @@ items:
           ```
   - uid: excel_release.Excel.PivotTable.enableDataValueEditing
     summary: |-
-      指定数据透视表是否允许用户对数据正文中的值进行编辑。
+      指定数据透视表是否允许用户编辑数据体中的值。
 
       \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: enableDataValueEditing
@@ -428,7 +428,7 @@ items:
         description: ''
   - uid: excel_release.Excel.PivotTable.useCustomSortLists
     summary: |-
-      指定在排序时, 数据透视表是否使用自定义列表。
+      指定排序时，数据透视表是否使用自定义列表。
 
       \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: useCustomSortLists
