--- a/docs/docs-ref-autogen/excel_release/excel.shape.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.shape.yml
@@ -2,7 +2,7 @@
 items:
   - uid: excel_release.Excel.Shape
     summary: |-
-      代表工作表中的一个通用 shape 对象。 一个形状可以是一个几何形状、一条线、一组形状, 等等。
+      代表工作表中的一个通用 shape 对象。 一个形状可以是一个几何形状、一条线、一组形状, 等等。若要了解有关 shape 对象模型的详细信息, 请参阅[使用 Excel JAVASCRIPT API 处理形状](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-shapes)<!-- -->.
 
       \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Shape
