--- a/docs/docs-ref-autogen/outlook/office.appointmentread.yml
+++ b/docs/docs-ref-autogen/outlook/office.appointmentread.yml
@@ -53,7 +53,7 @@ items:
       - outlook.Office.AppointmentRead.subject
   - uid: outlook.Office.AppointmentRead.addHandlerAsync
     summary: |-
-      添加支持事件的事件处理程序。
+      添加支持事件的事件处理程序。 **注意**: 事件仅在任务窗格中可用。
 
       目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->. 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中, 也支持。
 
@@ -92,7 +92,7 @@ items:
             - '(asyncResult: Office.AsyncResult<void>) => void'
   - uid: outlook.Office.AppointmentRead.addHandlerAsync_1
     summary: |-
-      添加支持事件的事件处理程序。
+      添加支持事件的事件处理程序。 **注意**: 事件仅在任务窗格中可用。
 
       目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->. 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中, 也支持。
 
@@ -711,7 +711,7 @@ items:
             - any
   - uid: outlook.Office.AppointmentRead.removeHandlerAsync
     summary: |-
-      删除受支持事件类型的事件处理程序。
+      删除受支持事件类型的事件处理程序。 **注意**: 事件仅在任务窗格中可用。
 
       目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->. 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中, 也支持。
 
@@ -746,7 +746,7 @@ items:
             - '(asyncResult: Office.AsyncResult<void>) => void'
   - uid: outlook.Office.AppointmentRead.removeHandlerAsync_1
     summary: |-
-      删除受支持事件类型的事件处理程序。
+      删除受支持事件类型的事件处理程序。 **注意**: 事件仅在任务窗格中可用。
 
       目前, 受支持的事件类型是`Office.EventType.AppointmentTimeChanged`<!-- -->, `Office.EventType.RecipientsChanged`<!-- -->, 并`Office.EventType.RecurrenceChanged`<!-- -->. 在 "预览`Office.EventType.AttachmentsChanged` " `Office.EventType.EnhancedLocationsChanged`中, 也支持。
 
