--- a/docs/docs-ref-autogen/outlook/office.mailbox.yml
+++ b/docs/docs-ref-autogen/outlook/office.mailbox.yml
@@ -48,7 +48,7 @@ items:
       - outlook.Office.Mailbox.userProfile
   - uid: outlook.Office.Mailbox.addHandlerAsync
     summary: |-
-      添加支持事件的事件处理程序。
+      添加支持事件的事件处理程序。 **注意**: 事件仅在任务窗格中可用。
 
       目前, 唯一受支持的事件类型是`Office.EventType.ItemChanged`<!-- -->. 在预览`Office.EventType.OfficeThemeChanged`中也受支持。
 
@@ -87,7 +87,7 @@ items:
             - '(asyncResult: Office.AsyncResult<void>) => void'
   - uid: outlook.Office.Mailbox.addHandlerAsync_1
     summary: |-
-      添加支持事件的事件处理程序。
+      添加支持事件的事件处理程序。 **注意**: 事件仅在任务窗格中可用。
 
       目前, 唯一受支持的事件类型是`Office.EventType.ItemChanged`<!-- -->. 在预览`Office.EventType.OfficeThemeChanged`中也受支持。
 
@@ -754,7 +754,7 @@ items:
             - any
   - uid: outlook.Office.Mailbox.removeHandlerAsync
     summary: |-
-      删除受支持事件类型的事件处理程序。
+      删除受支持事件类型的事件处理程序。 **注意**: 事件仅在任务窗格中可用。
 
       目前, 唯一受支持的事件类型是`Office.EventType.ItemChanged`<!-- -->. 在预览`Office.EventType.OfficeThemeChanged`中也受支持。
 
@@ -789,7 +789,7 @@ items:
             - '(asyncResult: Office.AsyncResult<void>) => void'
   - uid: outlook.Office.Mailbox.removeHandlerAsync_1
     summary: |-
-      删除受支持事件类型的事件处理程序。
+      删除受支持事件类型的事件处理程序。 **注意**: 事件仅在任务窗格中可用。
 
       目前, 唯一受支持的事件类型是`Office.EventType.ItemChanged`<!-- -->. 在预览`Office.EventType.OfficeThemeChanged`中也受支持。
 
