--- a/docs/docs-ref-autogen/outlook_1_5/office.mailbox.yml
+++ b/docs/docs-ref-autogen/outlook_1_5/office.mailbox.yml
@@ -46,7 +46,7 @@ items:
       - Outlook_1_5.Office.Mailbox.userProfile
   - uid: Outlook_1_5.Office.Mailbox.addHandlerAsync
     summary: |-
-      添加支持事件的事件处理程序。
+      添加支持事件的事件处理程序。 **注意**: 事件仅在任务窗格中可用。
 
       目前, 唯一受支持的事件类型是`Office.EventType.ItemChanged`<!-- -->.
 
@@ -85,7 +85,7 @@ items:
             - '(asyncResult: Office.AsyncResult<void>) => void'
   - uid: Outlook_1_5.Office.Mailbox.addHandlerAsync_1
     summary: |-
-      添加支持事件的事件处理程序。
+      添加支持事件的事件处理程序。 **注意**: 事件仅在任务窗格中可用。
 
       目前, 唯一受支持的事件类型是`Office.EventType.ItemChanged`<!-- -->.
 
@@ -679,7 +679,7 @@ items:
             - any
   - uid: Outlook_1_5.Office.Mailbox.removeHandlerAsync
     summary: |-
-      删除受支持事件类型的事件处理程序。
+      删除受支持事件类型的事件处理程序。 **注意**: 事件仅在任务窗格中可用。
 
       目前, 唯一受支持的事件类型是`Office.EventType.ItemChanged`<!-- -->.
 
@@ -714,7 +714,7 @@ items:
             - '(asyncResult: Office.AsyncResult<void>) => void'
   - uid: Outlook_1_5.Office.Mailbox.removeHandlerAsync_1
     summary: |-
-      删除受支持事件类型的事件处理程序。
+      删除受支持事件类型的事件处理程序。 **注意**: 事件仅在任务窗格中可用。
 
       目前, 唯一受支持的事件类型是`Office.EventType.ItemChanged`<!-- -->.
 
