commit bilingual contents

--- a/docs/docs-ref-autogen/outlook_1_4/office.notificationmessagedetails.yml
+++ b/docs/docs-ref-autogen/outlook_1_4/office.notificationmessagedetails.yml
@@ -2,13 +2,13 @@
 items:
   - uid: Outlook_1_4.Office.NotificationMessageDetails
     summary: |-
-      <span data-ttu-id="0e526-101">NotificationMessageDetails 对象的数组由 NotificationMessages 方法返回。</span><span class="sxs-lookup"><span data-stu-id="0e526-101">An array of NotificationMessageDetails objects are returned by the NotificationMessages.getAllAsync method.</span></span>
+      <span data-ttu-id="c4d3a-101">NotificationMessageDetails 对象的数组由 NotificationMessages 方法返回。</span><span class="sxs-lookup"><span data-stu-id="c4d3a-101">An array of NotificationMessageDetails objects are returned by the NotificationMessages.getAllAsync method.</span></span>
 
-      <span data-ttu-id="0e526-102">\[[API 集: 邮箱 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0e526-102">\[ [API set: Mailbox 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="c4d3a-102">\[[API 集: 邮箱 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c4d3a-102">\[ [API set: Mailbox 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
     remarks: |-
-      <span data-ttu-id="0e526-103">**[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span><span class="sxs-lookup"><span data-stu-id="0e526-103">**[Minimum permission level](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span></span>
+      <span data-ttu-id="c4d3a-103">**[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span><span class="sxs-lookup"><span data-stu-id="c4d3a-103">**[Minimum permission level](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span></span>
 
-      <span data-ttu-id="0e526-104">**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="0e526-104">**[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Compose or Read</span></span>
+      <span data-ttu-id="c4d3a-104">**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="c4d3a-104">**[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Compose or Read</span></span>
     name: Office.NotificationMessageDetails
     fullName: Office.NotificationMessageDetails
     langs:
@@ -22,7 +22,10 @@ items:
       - Outlook_1_4.Office.NotificationMessageDetails.persistent
       - Outlook_1_4.Office.NotificationMessageDetails.type
   - uid: Outlook_1_4.Office.NotificationMessageDetails.icon
-    summary: <span data-ttu-id="0e526-105">对在 "资源" 部分的清单中定义的图标的引用。</span><span class="sxs-lookup"><span data-stu-id="0e526-105">A reference to an icon that is defined in the manifest in the Resources section.</span></span> <span data-ttu-id="0e526-106">它将显示在信息栏区域。</span><span class="sxs-lookup"><span data-stu-id="0e526-106">It appears in the infobar area.</span></span> <span data-ttu-id="0e526-107">仅当类型为 InformationalMessage 时才适用。</span><span class="sxs-lookup"><span data-stu-id="0e526-107">It is only applicable if the type is InformationalMessage.</span></span> <span data-ttu-id="0e526-108">为不受支持的类型指定此参数将导致异常。</span><span class="sxs-lookup"><span data-stu-id="0e526-108">Specifying this parameter for an unsupported type results in an exception.</span></span>
+    summary: |-
+      <span data-ttu-id="c4d3a-105">对在 "资源" 部分的清单中定义的图标的引用。</span><span class="sxs-lookup"><span data-stu-id="c4d3a-105">A reference to an icon that is defined in the manifest in the Resources section.</span></span> <span data-ttu-id="c4d3a-106">它将显示在信息栏区域。</span><span class="sxs-lookup"><span data-stu-id="c4d3a-106">It appears in the infobar area.</span></span> <span data-ttu-id="c4d3a-107">仅当类型为 InformationalMessage 时才适用。</span><span class="sxs-lookup"><span data-stu-id="c4d3a-107">It is only applicable if the type is InformationalMessage.</span></span> <span data-ttu-id="c4d3a-108">为不受支持的类型指定此参数将导致异常。</span><span class="sxs-lookup"><span data-stu-id="c4d3a-108">Specifying this parameter for an unsupported type results in an exception.</span></span>
+
+      <span data-ttu-id="c4d3a-109">**注意**: 目前, 自定义图标仅显示在 Windows 上的 Outlook 中, 而不是在其他客户端 (例如, Mac、web 浏览器) 上显示。</span><span class="sxs-lookup"><span data-stu-id="c4d3a-109">**Note**: At present, the custom icon is displayed in Outlook on Windows only and not on other clients (e.g., Mac, web browser).</span></span>
     name: icon
     fullName: icon
     langs:
@@ -34,7 +37,7 @@ items:
         type:
           - string
   - uid: Outlook_1_4.Office.NotificationMessageDetails.key
-    summary: <span data-ttu-id="0e526-109">通知邮件标识符。</span><span class="sxs-lookup"><span data-stu-id="0e526-109">The identifier for the notification message.</span></span>
+    summary: <span data-ttu-id="c4d3a-110">通知邮件标识符。</span><span class="sxs-lookup"><span data-stu-id="c4d3a-110">The identifier for the notification message.</span></span>
     name: key
     fullName: key
     langs:
@@ -46,7 +49,7 @@ items:
         type:
           - string
   - uid: Outlook_1_4.Office.NotificationMessageDetails.message
-    summary: '<span data-ttu-id="0e526-110">通知邮件的文本。</span><span class="sxs-lookup"><span data-stu-id="0e526-110">The text of the notification message.</span></span> <span data-ttu-id="0e526-111">最大长度为 150 个字符。</span><span class="sxs-lookup"><span data-stu-id="0e526-111">Maximum length is 150 characters.</span></span> <span data-ttu-id="0e526-112">如果开发人员在更长的字符串中传递, 则会引发 ArgumentOutOfRange 异常。</span><span class="sxs-lookup"><span data-stu-id="0e526-112">If the developer passes in a longer string, an ArgumentOutOfRange exception is thrown.</span></span>'
+    summary: '<span data-ttu-id="c4d3a-111">通知邮件的文本。</span><span class="sxs-lookup"><span data-stu-id="c4d3a-111">The text of the notification message.</span></span> <span data-ttu-id="c4d3a-112">最大长度为 150 个字符。</span><span class="sxs-lookup"><span data-stu-id="c4d3a-112">Maximum length is 150 characters.</span></span> <span data-ttu-id="c4d3a-113">如果开发人员在更长的字符串中传递, 则会引发 ArgumentOutOfRange 异常。</span><span class="sxs-lookup"><span data-stu-id="c4d3a-113">If the developer passes in a longer string, an ArgumentOutOfRange exception is thrown.</span></span>'
     name: message
     fullName: message
     langs:
@@ -58,7 +61,7 @@ items:
         type:
           - string
   - uid: Outlook_1_4.Office.NotificationMessageDetails.persistent
-    summary: '<span data-ttu-id="0e526-113">仅当 type 为 InformationalMessage 时适用。</span><span class="sxs-lookup"><span data-stu-id="0e526-113">Only applicable when type is InformationalMessage.</span></span> <span data-ttu-id="0e526-114">如果为 true, 则邮件将一直保留到此加载项删除或由用户解除。</span><span class="sxs-lookup"><span data-stu-id="0e526-114">If true, the message remains until removed by this add-in or dismissed by the user.</span></span> <span data-ttu-id="0e526-115">如果为 false, 则当用户导航到其他项目时将其删除。</span><span class="sxs-lookup"><span data-stu-id="0e526-115">If false, it is removed when the user navigates to a different item.</span></span> <span data-ttu-id="0e526-116">对于错误通知，邮件将一直保留，直到用户看过一次。</span><span class="sxs-lookup"><span data-stu-id="0e526-116">For error notifications, the message persists until the user sees it once.</span></span> <span data-ttu-id="0e526-117">为不受支持的类型指定此参数将引发异常。</span><span class="sxs-lookup"><span data-stu-id="0e526-117">Specifying this parameter for an unsupported type throws an exception.</span></span>'
+    summary: '<span data-ttu-id="c4d3a-114">仅当 type 为 InformationalMessage 时适用。</span><span class="sxs-lookup"><span data-stu-id="c4d3a-114">Only applicable when type is InformationalMessage.</span></span> <span data-ttu-id="c4d3a-115">如果为 true, 则邮件将一直保留到此加载项删除或由用户解除。</span><span class="sxs-lookup"><span data-stu-id="c4d3a-115">If true, the message remains until removed by this add-in or dismissed by the user.</span></span> <span data-ttu-id="c4d3a-116">如果为 false, 则当用户导航到其他项目时将其删除。</span><span class="sxs-lookup"><span data-stu-id="c4d3a-116">If false, it is removed when the user navigates to a different item.</span></span> <span data-ttu-id="c4d3a-117">对于错误通知，邮件将一直保留，直到用户看过一次。</span><span class="sxs-lookup"><span data-stu-id="c4d3a-117">For error notifications, the message persists until the user sees it once.</span></span> <span data-ttu-id="c4d3a-118">为不受支持的类型指定此参数将引发异常。</span><span class="sxs-lookup"><span data-stu-id="c4d3a-118">Specifying this parameter for an unsupported type throws an exception.</span></span>'
     name: persistent
     fullName: persistent
     langs:
@@ -70,7 +73,7 @@ items:
         type:
           - Boolean
   - uid: Outlook_1_4.Office.NotificationMessageDetails.type
-    summary: '<span data-ttu-id="0e526-118">指定邮件的 ItemNotificationMessageType。</span><span class="sxs-lookup"><span data-stu-id="0e526-118">Specifies the ItemNotificationMessageType of message.</span></span> <span data-ttu-id="0e526-119">如果 type 为 ProgressIndicator 或 ErrorMessage, 则自动提供图标, 并且邮件不是永久性的。</span><span class="sxs-lookup"><span data-stu-id="0e526-119">If type is ProgressIndicator or ErrorMessage, an icon is automatically supplied and the message is not persistent.</span></span> <span data-ttu-id="0e526-120">因此，图标和持久性的属性对于这些类型的邮件都是无效的。</span><span class="sxs-lookup"><span data-stu-id="0e526-120">Therefore the icon and persistent properties are not valid for these types of messages.</span></span> <span data-ttu-id="0e526-121">包括它们将导致 ArgumentException。</span><span class="sxs-lookup"><span data-stu-id="0e526-121">Including them will result in an ArgumentException.</span></span> <span data-ttu-id="0e526-122">如果 type 为 ProgressIndicator, 则开发人员应在操作完成时删除或替换进度指示器。</span><span class="sxs-lookup"><span data-stu-id="0e526-122">If type is ProgressIndicator, the developer should remove or replace the progress indicator when the action is complete.</span></span>'
+    summary: '<span data-ttu-id="c4d3a-119">指定邮件的 ItemNotificationMessageType。</span><span class="sxs-lookup"><span data-stu-id="c4d3a-119">Specifies the ItemNotificationMessageType of message.</span></span> <span data-ttu-id="c4d3a-120">如果 type 为 ProgressIndicator 或 ErrorMessage, 则自动提供图标, 并且邮件不是永久性的。</span><span class="sxs-lookup"><span data-stu-id="c4d3a-120">If type is ProgressIndicator or ErrorMessage, an icon is automatically supplied and the message is not persistent.</span></span> <span data-ttu-id="c4d3a-121">因此，图标和持久性的属性对于这些类型的邮件都是无效的。</span><span class="sxs-lookup"><span data-stu-id="c4d3a-121">Therefore the icon and persistent properties are not valid for these types of messages.</span></span> <span data-ttu-id="c4d3a-122">包括它们将导致 ArgumentException。</span><span class="sxs-lookup"><span data-stu-id="c4d3a-122">Including them will result in an ArgumentException.</span></span> <span data-ttu-id="c4d3a-123">如果 type 为 ProgressIndicator, 则开发人员应在操作完成时删除或替换进度指示器。</span><span class="sxs-lookup"><span data-stu-id="c4d3a-123">If type is ProgressIndicator, the developer should remove or replace the progress indicator when the action is complete.</span></span>'
     name: type
     fullName: type
     langs:
