commit translated contents

--- a/docs/docs-ref-autogen/outlook_1_3/outlook/office.mailbox.yml
+++ b/docs/docs-ref-autogen/outlook_1_3/outlook/office.mailbox.yml
@@ -527,11 +527,11 @@ items:
 
       包含以下成员:
 
-      - hostName (string): 一个表示主机应用程序的名称的字符串。 它是以下值之一: Outlook、Mac Outlook、OutlookIOS 或 OutlookWebApp。
+      - hostName (string): 一个表示主机应用程序的名称的字符串。 它是以下值之一: "Outlook"、"OutlookWebApp"、"OutlookIOS" 或 "OutlookAndroid"。
 
-      - Diagnostics.hostversion (字符串): 表示主机应用程序或 Exchange Server 的版本的字符串。 如果邮件外接程序在桌面客户端或 iOS 上的 Outlook 中运行, 则 Diagnostics.hostversion 属性将返回主机应用程序 (Outlook) 的版本。 在 Outlook 网页版中, 该属性返回的是 Exchange 服务器的版本。 例如, 字符串15.0.468.0。
+      - Diagnostics.hostversion (字符串): 表示主机应用程序或 Exchange Server 的版本的字符串。 如果邮件外接程序在桌面客户端或 iOS 上的 Outlook 中运行, 则 Diagnostics.hostversion 属性将返回主机应用程序 (Outlook) 的版本。 在 Outlook 网页版中, 该属性返回的是 Exchange 服务器的版本。 一个示例是字符串 "15.0.468.0"。
 
-      - OWAView (MailboxEnums 或 string): 代表 web 上的 Outlook 当前视图的枚举 (或字符串文字)。 如果主机应用程序不是 web 上的 Outlook, 则访问此属性将导致未定义。 Web 上的 Outlook 具有三个视图 (OneColumn-当屏幕变宽时显示, TwoColumns-当屏幕变宽时显示; 在屏幕宽度显示为 ThreeColumns 时显示) 与屏幕和窗口的宽度相对应, 以及列数可以显示的。
+      - OWAView (MailboxEnums 或 string): 代表 web 上的 Outlook 当前视图的枚举 (或字符串文字)。 如果主机应用程序不是 web 上的 Outlook, 则访问此属性将导致未定义。 Web 上的 Outlook 具有三个视图 ("OneColumn"-在屏幕变宽时显示, "TwoColumns"-当屏幕变宽时显示, 在屏幕宽度显示为 "ThreeColumns" 时显示) 与屏幕和窗口的宽度相对应, 以及可以显示的列。
 
       有关详细信息, 请与[Office 诊断](xref:Outlook.Office.Diagnostics)<!-- -->.
 
