--- a/docs/docs-ref-autogen/word/word/word.inlinepicture.yml
+++ b/docs/docs-ref-autogen/word/word/word.inlinepicture.yml
@@ -25,6 +25,7 @@ items:
       - word.Word.InlinePicture.getRange_1
       - word.Word.InlinePicture.height
       - word.Word.InlinePicture.hyperlink
+      - word.Word.InlinePicture.imageFormat
       - word.Word.InlinePicture.insertBreak
       - word.Word.InlinePicture.insertBreak_1
       - word.Word.InlinePicture.insertContentControl
@@ -319,6 +320,22 @@ items:
       return:
         type:
           - string
+  - uid: word.Word.InlinePicture.imageFormat
+    summary: |-
+      获取嵌入式图像的格式。 只读。
+
+      \[[API 集: WORDAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+    isPreview: true
+    name: imageFormat
+    fullName: imageFormat
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'readonly imageFormat: Word.ImageFormat | "Unsupported" | "Undefined" | "Bmp" | "Jpeg" | "Gif" | "Tiff" | "Png" | "Icon" | "Exif" | "Wmf" | "Emf" | "Pict" | "Pdf" | "Svg";'
+      return:
+        type:
+          - Word.ImageFormat | "Unsupported" | "Undefined" | "Bmp" | "Jpeg" | "Gif" | "Tiff" | "Png" | "Icon" | "Exif" | "Wmf" | "Emf" | "Pict" | "Pdf" | "Svg"
   - uid: word.Word.InlinePicture.insertBreak
     summary: |-
       在主文档的指定位置插入分隔符。 insertLocation 值可以为“Before”或“After”。
