--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangeupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangeupdatedata.yml
@@ -143,7 +143,7 @@ items:
           - 'any[][]'
   - uid: excel.Excel.Interfaces.RangeUpdateData.numberFormatLocal
     summary: |-
-      表示 Excel 中的给定区域的数字格式代码，以用户语言的字符串表示。 将数字格式设置为局部区域时, value 参数可以是单个值 (字符串), 也可以是二维数组。 如果参数是单个值, 它将应用于区域中的所有单元格。
+      根据用户的语言设置, 表示给定范围的 Excel 数字格式代码。 将数字格式设置为局部区域时, value 参数可以是单个值 (字符串), 也可以是二维数组。 如果参数是单个值, 它将应用于区域中的所有单元格。 在获取或设置`numberFormatLocal`属性时, Excel 不会执行任何语言或格式强制。 任何返回的文本将根据系统设置中指定的语言使用本地格式化的字符串。
 
       \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: numberFormatLocal
