--- a/docs/docs-ref-autogen/outlook_1_5/outlook/office.diagnostics.yml
+++ b/docs/docs-ref-autogen/outlook_1_5/outlook/office.diagnostics.yml
@@ -23,7 +23,9 @@ items:
     summary: |-
       获取表示主机应用程序的名称的字符串。
 
-      可以是下列值之一的字符串: "Outlook"、"OutlookIOS" 或 "OutlookWebApp"。
+      可以是下列值之一的字符串: "Outlook"、"OutlookWebApp"、"OutlookIOS" 或 "OutlookAndroid"。
+
+      **注意**: 针对桌面客户端 (即 Windows 和 Mac) 上的 outlook 返回了 "outlook" 值。
 
       \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -42,9 +44,9 @@ items:
           - string
   - uid: Outlook.Office.Diagnostics.hostVersion
     summary: |-
-      获取表示主机应用程序或 Exchange Server 的版本的字符串。
+      获取表示主机应用程序或 Exchange 服务器的版本的字符串 (例如, "15.0.468.0")。
 
-      如果邮件外接程序在桌面或 iOS 上的 Outlook 客户端中运行, 则 Diagnostics.hostversion 属性将返回主机应用程序 (Outlook) 的版本。 在 Outlook 网页版中, 该属性返回的是 Exchange 服务器的版本。 一个示例是字符串 "15.0.468.0"。
+      如果邮件外接程序在桌面或移动客户端上的 Outlook 中运行, 则 Diagnostics.hostversion 属性将返回主机应用程序 (Outlook) 的版本。 在 Outlook 网页版中, 该属性返回的是 Exchange 服务器的版本。
 
       \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
